--- a/app/src/main/res/layout/activity_placeorder.xml
+++ b/app/src/main/res/layout/activity_placeorder.xml
@@ -11,6 +11,7 @@
         layout="@layout/toolbar"/>
 
     <TextView
+        android:id="@+id/order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/black"
