--- a/app/src/main/res/layout/activity_stall_page.xml
+++ b/app/src/main/res/layout/activity_stall_page.xml
@@ -10,11 +10,10 @@
     <include
         layout="@layout/toolbar"/>
 
-    <TextView
-        android:id="@+id/stallnametest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:text="Stall Name" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_stall"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/rv_stall"/>
 
 </LinearLayout>
