--- a/app/src/main/res/layout/rv_dashboard.xml
+++ b/app/src/main/res/layout/rv_dashboard.xml
@@ -38,8 +38,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="3dp"
-            android:src="@drawable/bi_dash" />
+            android:layout_marginEnd="7dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/bi_dash" />
 
     </RelativeLayout>
 
