--- a/app/src/main/res/layout/activity_stall_page.xml
+++ b/app/src/main/res/layout/activity_stall_page.xml
@@ -10,6 +10,16 @@
     <include
         layout="@layout/toolbar"/>
 
+    <TextView
+        android:id="@+id/stall_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="STALL A"
+        android:textSize="30dp"
+        android:fontFamily="@font/iowan_bold"
+        android:textColor="@color/black"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_stall"
         android:layout_width="match_parent"
