--- a/app/src/main/res/layout/activity_stall_page.xml
+++ b/app/src/main/res/layout/activity_stall_page.xml
@@ -10,20 +10,50 @@
     <include
         layout="@layout/toolbar"/>
 
-    <TextView
-        android:id="@+id/stall_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="STALL A"
-        android:textSize="30dp"
-        android:fontFamily="@font/iowan_bold"
-        android:textColor="@color/black"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_stall"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/rv_stall"/>
+        android:fillViewport="true">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/stall_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="STALL A"
+                android:textSize="30dp"
+                android:fontFamily="@font/iowan_bold"
+                android:textColor="@color/black"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_stall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/rv_stall"/>
+
+            <ImageButton
+                android:id="@+id/add_button_product"
+                android:layout_width="wrap_content"
+                android:layout_height="90dp"
+                android:layout_gravity="center"
+                android:background="@color/white"
+                android:src="@drawable/add_button" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Add New Product"
+                android:textColor="@color/black"
+                android:fontFamily="@font/inter_regular"
+                android:textSize="16dp"/>
+
+        </LinearLayout>
+
+    </ScrollView>
 </LinearLayout>
