--- a/app/src/main/res/layout/rv_dashboard.xml
+++ b/app/src/main/res/layout/rv_dashboard.xml
@@ -34,7 +34,7 @@
             android:fontFamily="@font/iowan_bold" />
 
         <ImageButton
-            android:id="@+id/bookmarkbtnRv"
+            android:id="@+id/remove_stall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
