--- a/app/src/main/res/layout/rv_alert.xml
+++ b/app/src/main/res/layout/rv_alert.xml
@@ -2,13 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="30dp">
+    android:layout_height="60dp">
 
     <TextView
         android:id="@+id/alert"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:textColor="@color/black"
-        android:text="Alert" />
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+
+        android:background="@drawable/roundedrect"
+        android:fontFamily="@font/inter_medium"
+        android:gravity="center"
+        android:text="Alert"
+        android:textColor="@color/white" />
 
 </RelativeLayout>
