--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -5,22 +5,18 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <RelativeLayout
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Beer Product Details"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:textColor="@color/black"
-            android:paddingBottom="8dp"/>
+        android:layout_height="wrap_content"
+        android:text="New Product"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:paddingBottom="8dp"/>
 
 
-    </RelativeLayout>
 
     <EditText
         android:id="@+id/edit_text_product_name"
