--- a/app/src/main/res/layout/activity_stall_page.xml
+++ b/app/src/main/res/layout/activity_stall_page.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,13 +6,13 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".StallPage">
-    <include
-        layout="@layout/toolbar"/>
 
-    <ScrollView
+    <include layout="@layout/toolbar" />
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,18 +27,20 @@
                 android:text="STALL A"
                 android:textSize="30dp"
                 android:fontFamily="@font/iowan_bold"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view_stall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/rv_stall"/>
+                tools:listitem="@layout/rv_stall" />
+
 
             <ImageButton
                 android:id="@+id/add_button_product"
                 android:layout_width="wrap_content"
                 android:layout_height="90dp"
+                android:layout_marginTop="15dp"
                 android:layout_gravity="center"
                 android:background="@color/white"
                 android:src="@drawable/add_button" />
@@ -51,9 +52,11 @@
                 android:text="Add New Product"
                 android:textColor="@color/black"
                 android:fontFamily="@font/inter_regular"
-                android:textSize="16dp"/>
+                android:textSize="16dp" />
 
         </LinearLayout>
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
+
+
 </LinearLayout>
