pie chart - stalls distribution

--- a/app/src/main/res/menu/botton_nav_menu.xml
+++ b/app/src/main/res/menu/botton_nav_menu.xml
@@ -13,5 +13,9 @@
         android:title="Distribution"
         android:icon="@drawable/trolley"/>
 
+    <item android:id="@+id/chart"
+        android:title="Performance"
+        android:icon="@drawable/chart"/>
+
 
 </menu>
