--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -6,6 +6,11 @@
     tools:context=".ChartFragment"
     tools:ignore="MissingClass">
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -41,7 +46,27 @@
             android:layout_gravity="center"
             android:textSize="14dp"/>
 
+        <com.github.mikephil.charting.charts.BarChart
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_gravity="center"
+            android:id="@+id/bar_chart"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product Sales Distribution"
+            android:textColor="@color/black"
+            android:fontFamily="@font/iowan_bold"
+            android:layout_gravity="center"
+            android:textSize="14dp"/>
+
     </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
 
 
 
