--- a/app/src/main/res/layout/fragment_distribution.xml
+++ b/app/src/main/res/layout/fragment_distribution.xml
@@ -3,19 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DistributionFragment">
+    tools:context=".AlertFragment"
+    >
 
-    <LinearLayout
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        tools:listitem="@layout/rv_dist"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:text="Distribution"/>
 
-    </LinearLayout>
 
 </FrameLayout>
