--- a/app/src/main/res/layout/rv_alert.xml
+++ b/app/src/main/res/layout/rv_alert.xml
@@ -2,7 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="120dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:background="@drawable/notifbg">
 
     <TextView
         android:id="@+id/alert"
@@ -10,12 +14,45 @@
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-
-        android:background="@drawable/roundedrect"
-        android:fontFamily="@font/inter_medium"
-        android:gravity="center"
+        android:layout_marginRight="30dp"
+        android:backgroundTint="#ff0000"
+        android:fontFamily="@font/inter_extrabold"
+        android:textSize="20dp"
         android:text="Alert"
-        android:textColor="@color/white" />
+        android:textColor="#ff0000" />
+    <TextView
+        android:layout_width="240dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="10dp"
+        android:backgroundTint="#c0c0c0"
+        android:fontFamily="@font/inter_medium"
+        android:text="Suggested Restock:"
+        android:textSize="20dp"
+        android:textColor="@color/black" />
+    <TextView
+        android:id="@+id/restocknumber"
+        android:layout_width="240dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="210dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="50dp"
+        android:backgroundTint="#c0c0c0"
+        android:fontFamily="@font/inter_medium"
+        android:textSize="20dp"
+        android:text="100"
+        android:textColor="@color/black" />
+    <Button
+        android:id="@+id/restock"
+        android:text="Restock"
+        android:layout_width="140dp"
+        android:layout_height="40dp"
+       android:gravity="center"
+        android:layout_marginTop="66dp"
+        android:layout_marginLeft="250dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/roundedrect"
+        />
 
 </RelativeLayout>
