--- a/app/src/main/res/layout/rv_dashboard.xml
+++ b/app/src/main/res/layout/rv_dashboard.xml
@@ -26,12 +26,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:fontFamily="@font/iowan_bold"
             android:paddingLeft="5dp"
             android:paddingBottom="5dp"
             android:text="STALL A"
             android:textColor="@color/black"
-            android:textSize="32dp"
-            android:fontFamily="@font/iowan_bold" />
+            android:textSize="32dp" />
 
         <ImageButton
             android:id="@+id/remove_stall"
