--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFF</color>
     <color name="silver">#C0C0C0</color>
     <color name="heineken_green">#008200</color>
+    <color name="red">#FF0000</color>
 
 </resources>
