--- a/app/src/main/res/menu/botton_nav_menu.xml
+++ b/app/src/main/res/menu/botton_nav_menu.xml
@@ -11,7 +11,7 @@
 
     <item android:id="@+id/chart"
         android:title="Performance"
-        android:icon="@drawable/chart"/>
+        android:icon="@drawable/performance"/>
 
 
 </menu>
