--- a/app/src/main/res/layout/order_confirmation.xml
+++ b/app/src/main/res/layout/order_confirmation.xml
@@ -81,6 +81,7 @@
         android:layout_gravity="center"
         android:textSize="60px"
         android:textColor="@color/black"
+        android:textStyle="bold"
 
         />
     <TextView
