--- a/app/src/main/res/layout/rv_alert.xml
+++ b/app/src/main/res/layout/rv_alert.xml
@@ -6,41 +6,42 @@
     android:layout_marginTop="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:background="@color/white">
+    android:background="@drawable/alert_background">
 
     <TextView
         android:id="@+id/alert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginRight="30dp"
         android:fontFamily="@font/inter_extrabold"
         android:textSize="20dp"
         android:text="Alert"
+        android:textStyle="bold"
         android:textColor="#ff0000" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="40dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="5dp"
         android:fontFamily="@font/inter_medium"
         android:text="Suggested Restock:"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:textColor="@color/black" />
 
     <TextView
         android:id="@+id/restocknumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="210dp"
+        android:layout_marginLeft="185dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="50dp"
         android:backgroundTint="#c0c0c0"
         android:fontFamily="@font/inter_medium"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:text="100"
         android:textColor="@color/black" />
 
