--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,7 @@
     <color name="silver">#C0C0C0</color>
     <color name="heineken_green">#008200</color>
     <color name="red">#FF0000</color>
+    <color name="gray_1">#E0DFDE</color>
+
 
 </resources>
