--- a/app/src/main/res/layout/rv_alert.xml
+++ b/app/src/main/res/layout/rv_alert.xml
@@ -36,7 +36,7 @@
         android:id="@+id/restocknumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="185dp"
+        android:layout_marginLeft="190dp"
         android:layout_marginTop="40dp"
         android:layout_marginRight="50dp"
         android:backgroundTint="#c0c0c0"
@@ -46,12 +46,14 @@
         android:textColor="@color/black" />
 
     <LinearLayout
+        android:id="@+id/restock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginTop="66dp"
         android:layout_marginRight="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="@drawable/restock">
 
         <TextView
             android:id="@+id/restockText"
@@ -59,17 +61,19 @@
             android:layout_height="wrap_content"
             android:text="Restock"
             android:textColor="@color/black"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="20px"
+            android:layout_marginLeft="18px"/>
 
-        <Switch
-            android:id="@+id/restock"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/toggle_button_selector"
-            android:checked="false"
-            android:textOff=""
-            android:textOn="" />
+        <ImageView
+            android:layout_width="100px"
+            android:layout_height="100px"
+            android:src="@drawable/restock_icon"
+            android:layout_marginRight="15px"
+            android:layout_marginTop="5px"
+            android:layout_marginBottom="5px"/>
 
     </LinearLayout>
 
