--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -58,7 +58,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Total Stock - Product Distribution"
+            android:text="Product Sales Division"
             android:textColor="@color/black"
             android:fontFamily="@font/iowan_bold"
             android:layout_gravity="center"
